--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.91.8",
+    "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
