--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
