--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "vite-plugin-checker": "^0.6.4",
     "vite-plugin-svgr": "^3.3.0",
     "zustand": "^4.5.2"
   },
