--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.91.8",
+    "@types/react-outside-click-handler": "^1.3.3",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
@@ -19,6 +20,7 @@
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.23.1",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-svgr": "^3.3.0",
