--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
+    "lightweight-charts": "^4.1.5",
     "lottie-react": "^2.4.0",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
