--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.91.8",
+    "@tanstack/react-query": "^5.51.9",
     "@types/react-outside-click-handler": "^1.3.3",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "bip39": "^3.1.0",
